--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sklep LEGO – KOSTROP</title>
+    <title>KOSTROP – Sklep LEGO</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script defer src="script.js"></script>
 </head>
 <body>
-    <header></header>
+    <header>
+        <a href="#" class="logo">KOSTROP</a>
+
+        <input type="checkbox" id="check-menu">
+        <label for="check-menu" class="icons">
+            <i class="fa-solid fa-bars" id="menu-icon"></i>
+            <i class="fa-solid fa-xmark" id="close-icon"></i>        
+        </label>
+
+        <nav>
+           <a href="#" style="--i:0;">O nas</a>
+           <a href="#" style="--i:1;">Oferta</a>
+           <a href="#" style="--i:2;">Nowości</a>
+           <a href="#" style="--i:3;">Skup klocków</a>
+           <a href="#" style="--i:4;">Kontakt</a>
+           <a href="#" style="--i:5;">FAQ</a>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
