--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KOSTROP – Sklep LEGO</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <script defer src="script.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <a href="#" class="logo">KOSTROP</a>
+      <a href="#" class="logo">KOSTROP</a>
 
-        <input type="checkbox" id="check-menu">
-        <label for="check-menu" class="icons">
-            <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <i class="fa-solid fa-xmark" id="close-icon"></i>        
-        </label>
+      <input type="checkbox" id="check-menu" />
+      <label for="check-menu" class="icons">
+        <i class="fa-solid fa-bars" id="menu-icon"></i>
+        <i class="fa-solid fa-xmark" id="close-icon"></i>
+      </label>
 
-        <nav>
-           <a href="#" style="--i:0;">O nas</a>
-           <a href="#" style="--i:1;">Oferta</a>
-           <a href="#" style="--i:2;">Nowości</a>
-           <a href="#" style="--i:3;">Skup klocków</a>
-           <a href="#" style="--i:4;">Kontakt</a>
-           <a href="#" style="--i:5;">FAQ</a>
-        </nav>
+      <nav>
+        <a href="#" style="--i: 0">O nas</a>
+        <a href="#" style="--i: 1">Oferta</a>
+        <a href="#" style="--i: 2">Nowości</a>
+        <a href="#" style="--i: 3">Skup klocków</a>
+        <a href="#" style="--i: 4">Kontakt</a>
+        <a href="#" style="--i: 5">FAQ</a>
+      </nav>
     </header>
     <main></main>
     <footer></footer>
-</body>
+  </body>
 </html>
