--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KOSTROP – Sklep LEGO</title>
+    <link rel="icon" href="imgs/red-brick.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script defer src="script.js"></script>
   </head>
@@ -46,7 +52,58 @@
         </div>
       </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section id="about">
+        <div id="info-text">
+          <h2><i>KOSTROP</i> – Sklep z&nbsp;klockami LEGO® w&nbsp;Ursusie</h2>
+
+          <h3>Nasze usługi:</h3>
+          <ul>
+            <li>Sprzedajemy nowe zestawy LEGO®</li>
+            <li>
+              Sprzedajemy elementy LEGO® na sztuki (ponad 10 000 różnych
+              klocków!)
+            </li>
+            <li>
+              Skupujemy klocki LEGO® na kilogramy (50&nbsp;zł&nbsp;/&nbsp;kg)
+            </li>
+            <li>Prowadzimy punkt nadawczy (InPost, Orlen Paczka, UPS)</li>
+          </ul>
+
+          <h3>Nasza lokalizacja:</h3>
+          <p>
+            ul. Kolorowa 8<br />
+            02-495 Warszawa, Ursus<br />
+            tel. 509 688 166<br />
+            <a href="mailto:kostrop@wp.pl">kostrop@wp.pl</a>
+          </p>
+
+          <h3>Godziny otwarcia:</h3>
+          <p>
+            Poniedziałek – Piątek: <b>10:00 – 18:00</b><br />
+            Sobota – Niedziela: Zamknięte
+          </p>
+
+          <p>
+            Zapraszamy do odwiedzenia naszego sklepu stacjonarnego lub online na
+            Allegro!
+          </p>
+        </div>
+        <div id="map-container">
+          <div id="map"></div>
+        </div>
+      </section>
+      <section id="buyback-price-list"></section>
+      <section id="FAQ"></section>
+    </main>
+    <footer>
+      <h4>KOSTROP</h4>
+      <p>
+        ul. Kolorowa 8<br />
+        02-495 Warszawa, Ursus<br />
+        tel. 509 688 166<br />
+        <a href="mailto:kostrop@wp.pl">kostrop@wp.pl</a>
+      </p>
+    </footer>
   </body>
 </html>
