add footer info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KOSTROP – Sklep LEGO</title>
+    <title>KOSTROP – Sklep z LEGO</title>
     <link rel="icon" href="imgs/red-brick.png" />
     <link rel="stylesheet" href="style.css" />
     <link
@@ -97,13 +97,39 @@
       <section id="FAQ"></section>
     </main>
     <footer>
-      <h4>KOSTROP</h4>
-      <p>
-        ul. Kolorowa 8<br />
-        02-495 Warszawa, Ursus<br />
-        tel. 509 688 166<br />
-        <a href="mailto:kostrop@wp.pl">kostrop@wp.pl</a>
-      </p>
+      <div id="banner">
+        <p class="logo">KOSTROP</p>
+      </div>
+      <div id="contact-info">
+        <h4>KOSTROP</h4>
+        <p>
+          ul. Kolorowa 8<br />
+          02-495 Warszawa, Ursus<br />
+          tel. 509 688 166<br />
+          <a href="mailto:kostrop@wp.pl">kostrop@wp.pl</a>
+        </p>
+      </div>
+      <div id="opening-hours">
+        <h4>Godziny otwarcia:</h4>
+        <p>
+          Poniedziałek – Piątek: <b>10:00 – 18:00</b><br />
+          Sobota – Niedziela: Zamknięte
+        </p>
+      </div>
+      <div id="copyright-info">
+        <div id="social-media">
+          <a href="https://www.facebook.com/nebbjginvgnbugcffnjvvt"
+            ><i class="fa-brands fa-facebook-f"></i
+          ></a>
+          <a href="https://www.instagram.com/kostrop.pl"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https://www.tiktok.com/@skleplegoursus"
+            ><i class="fa-brands fa-tiktok"></i
+          ></a>
+        </div>
+        <p>&copy; 2025 Created by Bartosz Łukicz</p>
+      </div>
     </footer>
   </body>
 </html>
