add google maps link

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
           <li><a class="nav-item" href="#about">O nas</a></li>
           <li>
             <a
+              id="shop-nav"
               class="nav-item"
               href="https://allegro.pl/uzytkownik/KOSTROP?dd_referrer=https%3A%2F%2Fwww.google.com%2F"
-              >Oferta</a
+              >Sklep</a
             >
           </li>
           <li><a class="nav-item" href="#">Nowości</a></li>
@@ -96,10 +97,14 @@
 
           <h3>Nasza lokalizacja:</h3>
           <div id="contact-info">
-            <p>
-              <i class="fa-solid fa-location-dot"></i>ul. Kolorowa 8<br />
-              <span id="postal-code">02-495 Warszawa, Ursus</span>
-            </p>
+            <a
+              href="https://www.google.com/maps/place/SKLEP+Z+KLOCKAMI+LEGO/@52.1905181,20.8912748,17z/data=!3m1!5s0x471934e9aca246a3:0xae6264b4b4151766!4m10!1m2!2m1!1skostrop!3m6!1s0x471935dbcfc3b175:0x49bdca88f38219d8!8m2!3d52.1905148!4d20.8938497!15sCgdrb3N0cm9wkgEJdG95X3N0b3Jl4AEA!16s%2Fg%2F11nnzb1rl2?entry=ttu&g_ep=EgoyMDI1MDkxNS4wIKXMDSoASAFQAw%3D%3D"
+            >
+              <p>
+                <i class="fa-solid fa-location-dot"></i>ul. Kolorowa 8<br />
+                <span id="postal-code">02-495 Warszawa, Ursus</span>
+              </p>
+            </a>
             <p>
               <i class="fa-solid fa-phone"></i
               ><a class="phone" href="tel:509688166">509 688 166</a>
@@ -118,13 +123,13 @@
 
           <p>
             Zapraszamy do odwiedzenia naszego sklepu stacjonarnego lub online na
-            Allegro!
+            Allegro.pl!
           </p>
 
           <a
             class="shop-link"
             href="https://allegro.pl/uzytkownik/KOSTROP?dd_referrer=https%3A%2F%2Fwww.google.com%2F"
-            >Nasza oferta Allegro</a
+            >Nasza oferta Allegro.pl</a
           >
         </div>
         <div id="map-container">
@@ -164,10 +169,14 @@
       </div>
       <div id="contact-info">
         <h4>KOSTROP</h4>
-        <p>
-          <i class="fa-solid fa-location-dot"></i>ul. Kolorowa 8<br />
-          <span id="postal-code">02-495 Warszawa, Ursus</span>
-        </p>
+        <a
+          href="https://www.google.com/maps/place/SKLEP+Z+KLOCKAMI+LEGO/@52.1905181,20.8912748,17z/data=!3m1!5s0x471934e9aca246a3:0xae6264b4b4151766!4m10!1m2!2m1!1skostrop!3m6!1s0x471935dbcfc3b175:0x49bdca88f38219d8!8m2!3d52.1905148!4d20.8938497!15sCgdrb3N0cm9wkgEJdG95X3N0b3Jl4AEA!16s%2Fg%2F11nnzb1rl2?entry=ttu&g_ep=EgoyMDI1MDkxNS4wIKXMDSoASAFQAw%3D%3D"
+        >
+          <p>
+            <i class="fa-solid fa-location-dot"></i>ul. Kolorowa 8<br />
+            <span id="postal-code">02-495 Warszawa, Ursus</span>
+          </p>
+        </a>
         <p>
           <i class="fa-solid fa-phone"></i
           ><a class="phone" href="tel:509688166">509 688 166</a>
