navbar toggle fix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p id="toggle-nav"><i class="fa-solid fa-bars" id="menu-icon"></i></p>
         <ul>
           <li>
-            <a class="logo" href="#"
+            <a class="logo nav-item" href="#"
               ><img src="imgs/red-brick.png" alt="red-brick-logo" />KOSTROP</a
             >
           </li>
